--- a/cv/index.html
+++ b/cv/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/1-bmR8L2u03HPTc9-RTKYCoNtkYLIR8vEHvUYMI4fpNc/edit?usp=sharing">
-  <link rel="canonical" href="https://docs.google.com/document/d/1-bmR8L2u03HPTc9-RTKYCoNtkYLIR8vEHvUYMI4fpNc/edit?usp=sharing">
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/1-bmR8L2u03HPTc9-RTKYCoNtkYLIR8vEHvUYMI4fpNc/preview">
   <title>Redirecting…</title>
 </head>
 <body>
-  <p>Redirecting to <a href="https://docs.google.com/document/d/1-bmR8L2u03HPTc9-RTKYCoNtkYLIR8vEHvUYMI4fpNc/edit?usp=sharing">https://docs.google.com/document/d/1-bmR8L2u03HPTc9-RTKYCoNtkYLIR8vEHvUYMI4fpNc/edit?usp=sharing</a>…</p>
-  <script>location.replace("https://docs.google.com/document/d/1-bmR8L2u03HPTc9-RTKYCoNtkYLIR8vEHvUYMI4fpNc/edit?usp=sharing");</script>
+  <p>Redirecting to CV…</p>
 </body>
 </html>
