--- a/cv1c/index.html
+++ b/cv1c/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/1rPnRVmQCTu1pwb7t6tPGi0oVDRttGv-OvfefYxk9Fhs/edit?usp=sharing">
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/1rPnRVmQCTu1pwb7t6tPGi0oVDRttGv-OvfefYxk9Fhs/preview">
   <title>Redirecting…</title>
 </head>
 <body>
