--- a/cv1crus/index.html
+++ b/cv1crus/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/1KnAVtoKkTiqAt6VJW1lcgcaLJWMlIcmuB_6e7PKaty4/edit?usp=sharing">
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/1KnAVtoKkTiqAt6VJW1lcgcaLJWMlIcmuB_6e7PKaty4/preview">
   <title>Redirecting…</title>
 </head>
 <body>
